Really fix the selector modal scrollbar

--- a/packages/browser-wallet/src/popup/pages/Web3ProofRequest/Web3ProofRequest.scss
+++ b/packages/browser-wallet/src/popup/pages/Web3ProofRequest/Web3ProofRequest.scss
@@ -188,7 +188,6 @@
         box-shadow: 0 0 15px 0 #0000001a;
         margin-top: 178px;
         margin-left: 32px;
-        margin-right: 32px;
         width: calc(100% - 48px);
     }
 
